--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.password=neki123@
 
 api.security.token.secret = ${JWT_SECRET:my-secret-key}
 
-logging.level.org.springframework.web: DEBUG
+spring.web.resources.static-locations=file:///C:/ImagensPerfil/
 
-spring.web.resources.static-locations=file:///C:/Users/Leo/Downloads/profilePictures/
+logging.level.org.springframework.web: DEBUG
